--- a/edit_profile.html
+++ b/edit_profile.html
@@ -46,38 +46,82 @@
             <main class="col-12 col-lg-9">
                 <h2>Edit Profile</h2>
                 <hr/>
-                <form class="row form-edit-profile">
+                <form class="row form-edit-profile" action="#" method="POST" onsubmit="return validate()">
                     <div class="form-header">
                         <h6>Profile Form Elements</h6>
                     </div>
+                    <!-- First Name -->
                     <div class="col-12 col-lg-8">
                       <label for="inputfirstname" class="form-label"><b>First Name</b></label>
-                      <input type="text" class="form-control" id="inputfirstname" placeholder="Enter the first name">
+                      <input type="text" name="firstname" class="form-control" id="inputfirstname" placeholder="Enter the first name" required>
+                      <div class="error" id="error-inputfirstname"></div>
                     </div>
+                     <!-- Last Name -->
                     <div class="col-12 col-lg-8">
                       <label for="inputlastname" class="form-label"><b>Last Name</b></label>
-                      <input type="text" class="form-control" id="inputlastname" placeholder="Enter the last name">
+                      <input type="text" name="lastname" class="form-control" id="inputlastname" placeholder="Enter the last name" required>
+                      <div class="error" id="error-inputlastname"></div>
                     </div>
+                     <!-- Email -->
                     <div class="col-12 col-lg-8">
                         <label for="inputEmail" class="form-label"><b>Email</b></label>
-                        <input type="email" class="form-control" id="inputEmail" placeholder="your_email@example.com" style="border: none;">
+                        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="your_email@example.com" style="border: none;" required>
                       </div>
+                       <!-- Phone -->
                     <div class="col-12 col-lg-8">
                       <label for="inputPhone" class="form-label"><b>Phone</b></label>
-                      <input type="text" class="form-control" id="inputPhone" placeholder="Enter your phone number">
+                      <input type="text" name="phone" class="form-control" id="inputPhone" placeholder="Enter your phone number" required>
+                      <div class="error" id="error-inputPhone"></div>
                     </div>
+                     <!-- Description  -->
                     <div class="col-12 col-lg-8">
-                        <label for="inputDescription" class="form-label"><b>Description</b></label>
-                        <textarea class="form-control" id="inputDescription" rows="3"></textarea>
+                        <label for="textareaDescription" class="form-label"><b>Description</b></label>
+                        <textarea class="form-control" name="textareaDescription" id="textareaDescription" rows="3"></textarea>
+                        <div class="error" id="error-textareaDescription"></div>
                       </div>
                     <div class="col-12">
-                      <button type="submit" class="btn my-btn">Submit Button</button>
-                      <button type="reset" class="btn my-btn">Reset Button</button>
+                      <button type="submit" name="submit" class="btn my-btn">Submit Button</button>
+                      <button type="reset" name="reset" class="btn my-btn">Reset Button</button>
                     </div>
                   </form>
             </main>
         </div>
     </div>
+    <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- <script src="../js/validate.js"></script> -->
+    <script>
+      function validate(){
+        let isValid = true;
+        // variables - edit_profile
+        const firstName = document.getElementById('inputfirstname').value;
+        const lastName = document.getElementById('inputlastname').value;
+        const phone = document.getElementById('inputPhone').value;
+        const description = document.getElementById('textareaDescription').value;
+        
+        // validate - edit_profile
+        if(firstName.length < 3 || firstName.length > 30){
+          document.getElementById('error-inputfirstname').innerText = 'First Name must be has length 3 - 30';
+          isValid = false;
+        }
+
+        if(lastName.length < 3 || lastName.length > 30){
+          document.getElementById('error-inputlastname').innerText = 'Last Name must be has length 3 - 30';
+          isValid = false;
+        }
+
+        if(phone.length < 9 || phone.length > 13){
+          document.getElementById('error-inputPhone').innerText = 'Phone must be has length 9 - 13';
+          isValid = false;
+        }
+
+        if(description.length > 200){
+          document.getElementById('error-textareaDescription').innerText = 'Description must be has length < 200 ';
+          isValid = false;
+        }
+
+        return isValid;
+      }
+    </script> -->
 </body>
 </html>
